--- a/WinFormsApp1/efpt.config.json
+++ b/WinFormsApp1/efpt.config.json
@@ -27,6 +27,14 @@
          "ObjectType": 0
       },
       {
+         "Name": "LessonTypes",
+         "ObjectType": 0
+      },
+      {
+         "Name": "LesssonOrder",
+         "ObjectType": 0
+      },
+      {
          "Name": "Offices",
          "ObjectType": 0
       },
@@ -40,10 +48,6 @@
       },
       {
          "Name": "Teachers",
-         "ObjectType": 0
-      },
-      {
-         "Name": "TeacherSubjects",
          "ObjectType": 0
       },
       {
@@ -62,7 +66,7 @@
    "UiHint": null,
    "UncountableWords": null,
    "UseBoolPropertiesWithoutDefaultSql": false,
-   "UseDatabaseNames": false,
+   "UseDatabaseNames": true,
    "UseDateOnlyTimeOnly": false,
    "UseDbContextSplitting": false,
    "UseDecimalDataAnnotationForSprocResult": true,
